feat: Add `message` arg to `Cli` struct & print on run.
- Add a `message` argument to the `Cli` struct, print it when specified, and modify the `run_cli` function accordingly.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4", features = ["derive"]}
+dirs = "5.0"
+toml = "0.8"
 
 [[bin]]
 name = "gim"
