--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 clap = { version = "4.4", features = ["derive"]}
 dirs = "5.0"
 toml = "0.8"
+git2 = "0.18"
 
 [[bin]]
 name = "gim"
