chore: Add package metadata, formula, license, and docs
Cargo.toml: Add package metadata and release profile configuration
Formula/git-intelligence-message.rb: Create Homebrew formula for installation
LICENSE: Add MIT license file
README.md: Enhance with features, installation instructions, and badges

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,18 @@
 name = "git-intelligence-message"
 version = "1.0.0"
 edition = "2021"
+description = "An advanced Git commit message generation utility with AI assistance"
+authors = ["Sheldon.Wei<sheldon.sh.hb@gmail.com>"]
+license = "MIT"
+repository = "https://github.com/davelet/git-intelligence-message"
+readme = "README.md"
+keywords = ["git", "commit", "ai", "cli"]
+categories = ["command-line-utilities"]
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
 
 [dependencies]
 clap = { version = "4.4", features = ["derive"]}
