chore: Upgrade project to 1.1.0, use gim-config crate, add Doubao URL logic
CHANGELOG.md: Add version 1.1.0 details including new crate and breaking changes
Cargo.toml: Upgrade project version to 1.1.0 and add local gim-config dependency
Formula/git-intelligence-message.rb: Remove Homebrew formula file
src/cli/entry.rs: Replace local config import with gim-config crate import
src/cli/handler.rs: Replace local config calls with gim-config crate calls
src/cli/http.rs: Add Doubao URL check logic
src/config.rs: Remove local configuration module
src/constants.rs: Add Doubao API URL constant
src/main.rs: Replace local config import with gim-config crate import
Cargo.toml: Replace local gim-config path with version 0.1.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "git-intelligence-message"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
 description = "An advanced Git commit message generation utility with AI assistance"
 authors = ["Sheldon.Wei<sheldon.sh.hb@gmail.com>"]
@@ -16,6 +16,7 @@ lto = true
 codegen-units = 1
 
 [dependencies]
+gim-config = "0.1.0"
 clap = { version = "4.4", features = ["derive"]}
 dirs = "5.0"
 toml = "0.8"
