--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,6 +18,8 @@ env:
 
 jobs:
   build-documentation:
+    permissions:  # 添加这部分
+      contents: write  # 允许推送代码
     name: Build and deploy docs
     runs-on: ubuntu-latest
     steps:
