feat: added custom param `lines_limit`
CHANGELOG.md: Update 1.4.0 release notes (7)
Cargo.lock: Bump gim-config to 0.4.0 and add indoc (2)
Cargo.toml: Bump gim-config to 0.4.0 and add indoc (2)
docs/content/ai.md: Add 'gim ai' usage example (1)
docs/content/changelog.md: Add 1.4.0 changelog details (1)
docs/content/contribute.md: Update platform compatibility info (1)
docs/content/index.md: Add Dog Food Policy section (1)
docs/content/update.md: Add max and interval update config examples (2)
docs/content/user_config.md: Add user config documentation (1)
docs/mkdocs.yml: Update nav with user_config and changelog (1)
src/cli/command.rs: Refactor update command and add new config options (1)
src/cli/custom_param.rs: Add custom lines_limit parameter handling (1)
src/cli/entry.rs: Refactor update command and add diff line limit check (1)
src/cli/prompt.rs: Update prompt trimming logic (1)
src/cli/update/mod.rs: Add max_try and interval update config functions (2)
src/constants.rs: Add CUSTOM_SECTION_NAME and DIFF_SIZE_LIMIT (1)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ lto = true
 codegen-units = 1
 
 [dependencies]
-gim-config = "0.3.0"
+gim-config = "0.4.0"
 clap = { version = "4.4", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -30,6 +30,7 @@ semver = "1.0"
 log = "0.4"
 pretty_env_logger = "0.5"
 lazy_static = "1.4"
+indoc = "2.0.6"
 
 [[bin]]
 name = "gim"
