--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -47,4 +47,4 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           cd docs
-          mike deploy nightly --push
+          mike deploy nightly --update --push
