feat: add show-location flag with config and documentation updates
docs/content/changelog.md: Add 1.7.0 section with show-location flag (5)
docs/content/user_config.md: Add show-location documentation (8)
src/cli/ai_configer.rs: Replace get_config_into_toml with get_config (1)
src/cli/custom_param.rs: Replace get_config_into_toml with get_config (1)
src/cli/entry.rs: Replace get_config with get_config_and_print (1)
src/cli/update/reminder.rs: Replace get_config_into_toml with get_config (1)
src/main.rs: Replace get_config_into_toml with get_config (1)
src/cli/command.rs: Add show_location option to Config command (4)
src/cli/custom_param.rs: Change print_verbose to println (1)
src/cli/entry.rs: Add show_location handling and open config directory (13)
src/main.rs: Replace get_config with get_config_into_toml (1)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "git-intelligence-message"
-version = "1.6.0"
-edition = "2021"
+version = "1.7.0"
+edition = "2024"
 description = "An advanced Git commit message generation utility with AI assistance"
 authors = ["Sheldon.Wei<sheldon.sh.hb@gmail.com>"]
 license = "MIT"
@@ -20,7 +20,8 @@ panic = "abort"
 rustflags = ["-C", "target-feature=+crt-static"]
 
 [dependencies]
-gim-config = "0.5.0"
+gim-config = "1.0.0"
+# gim-config = { git = "https://github.com/davelet/gim-config", branch = "develop" }
 clap = { version = "4.4", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
