feat: add Windows support and improve cross-platform compatibility

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "git-intelligence-message"
 version = "1.7.0"
 edition = "2024"
-description = "An advanced Git commit message generation utility with AI assistance"
+description = "An advanced Git commit message generation utility with AI assistance. Supports Windows, macOS, and Linux."
 authors = ["Sheldon.Wei<sheldon.sh.hb@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/davelet/git-intelligence-message"
